fix for crash when using invalid command line parameters that cause the app to exit before initializing nsAppShell bug 45074 r=smfr